Revision history for Dist-Zilla-Plugin-StaticInstall

{{$NEXT}}
          - also check for .pm, .pod, .pl files in the root and in BASEEXT/

0.003     2015-07-14 03:24:15Z
          - cooperate with [ModuleBuildTiny]'s static = auto feature

0.002     2015-07-14 02:43:32Z
          - new mode allowing the automatic calculation of the flag
            value, including a dry_run option for diagnostic purposes

0.001     2015-06-27 19:44:36Z
          - Initial release.